@@ -1,6 +1,8 @@
 ﻿[B]Version 2.2.5[/B]
 [+] Списки Медиа: Исправлен KickAssSo
+[+] Списки Медиа: Исправлен поиск мета-данных TheMovieDB вызывавший ошибку
 [+] Поиск: Исправлен KickAssSo
+[+] Поиск: Добавлен логин RiperAM
 
 [B]Version 2.2.4[/B]
 [+] Проигрыватель: Поддержка музыки (проигрывание следующего файла).
